avoid horizontal scrolling on mobile

--- a/front/src/styles/base.scss
+++ b/front/src/styles/base.scss
@@ -1,3 +1,8 @@
+body {
+  @include mobile() {
+    overflow-x: hidden;
+  }
+}
 .main-content {
   .container {
     @include mobile() {
